# trie

./: CMakeLists.txt  README.md  trie.vix  vix.json
examples/: autocomplete.cpp  basic_usage.cpp  ranked_search.cpp
include/trie/: trie.hpp
tests/: test_basic.cpp
